# MAT_228

./: CMakeLists.txt  README.md  execute_tasks.py  generate_documentation  index.html  install_required_packages  lib_output_processing.py  main.cpp
Theory_Homework/Theory_Homework_1/: Theory_Homework_1.tex  Theory_Homework_1.tex.backup
Theory_Homework/Theory_Homework_2/: Theory_Homework_2.tex  Theory_Homework_2.tex.backup
Theory_Homework/Theory_Homework_3/: Theory_Homework_3.tex
convergence_tables/: Gaussian_Pulse_Flux_Corrected_Transport.txt  Semicircle_Flux_Corrected_Transport.txt  Semicircle_Fromm.txt  Semicircle_Fromm_CFL_0.5.txt  Semicircle_Fromm_van_Leer.txt  Semicircle_Fromm_van_Leer_CFL_half.txt  Semicircle_Lax_Friedrichs.txt  Semicircle_Upwind.txt  Square_Wave_Flux_Corrected_Transport.txt  Square_Wave_Fromm_van_Leer.txt
css/: navigation.css  style.css
html/: theory_homework_1.html  theory_homework_2.html  theory_homework_3.html
html/computations/: Gaussian_Pulse_Flux_Corrected_Transport.html  Gaussian_Pulse_Fromm.html  Gaussian_Pulse_Fromm_CFL_half.html  Gaussian_Pulse_Fromm_van_Leer.html  Gaussian_Pulse_Fromm_van_Leer_CFL_half.html  Gaussian_Pulse_Lax_Friedrichs.html  Gaussian_Pulse_Lax_Wendroff.html  Gaussian_Pulse_Lax_Wendroff_Fourth_Order.html  Gaussian_Pulse_Upwind.html  Semicircle_Flux_Corrected_Transport.html  Semicircle_Fromm.html  Semicircle_Fromm_CFL_half.html  Semicircle_Fromm_van_Leer.html  Semicircle_Fromm_van_Leer_CFL_half.html  Semicircle_Lax_Friedrichs.html  Semicircle_Lax_Wendroff.html  (+12 more)
include/: Compute_task.hpp  Fluxes.hpp
(+283 files in other folders)
